Working OpenGL Window & PropertyGrid inside Splitter

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,11 @@ if(NOT wxWidgets_FOUND)
 	message(SEND_ERROR "Couldn't find wxWidgets")
 endif()
 
+FIND_PACKAGE(OpenGL REQUIRED)
+FIND_PACKAGE(GLEW REQUIRED)
+FIND_PACKAGE(GLUT REQUIRED)
+FIND_PACKAGE(assimp REQUIRED)
+
 set(HDRS
 	./acApp.h
 	./acFrame.h
@@ -22,5 +27,8 @@ INCLUDE("${wxWidgets_USE_FILE}")
 add_executable(autocity ${HDRS} ${SRCS})
  
 set_target_properties(autocity PROPERTIES DEBUG_POSTFIX _d)
- 
-target_link_libraries(autocity ${wxWidgets_LIBRARIES} ${GDK_LIBRARY})
+
+include_directories(${OPENGL_INCLUDE_DIRS} ${assimp_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
+
+target_link_libraries(autocity ${wxWidgets_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARY}
+	${assimp_LIBRARY})
