--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 
 project(autocity)
 
-add_definitions(-std=c++11)
+set(CMAKE_CXX_STANDARD 11)
 
 add_subdirectory(src)
